fixed button to top alignment and had to fix the gallery pictures in portrait mode as their size got caddy wompus for some reason. all on the S2

--- a/css/UI-UXport.css
+++ b/css/UI-UXport.css
@@ -28,38 +28,37 @@ section{
 	margin-top:-10%;	
 }
 figure.ui_pic{
-	position:absolute;
+	position:relative;
 	display:block;
-	left:-8%;
-	width:100%;
+	margin: 0 1% 0 0;
+	/*left:-8%;*/
+	min-width:320px;
+	height:auto;
 }
 #gallery{
 	clear:both;
 	position:relative;
 	display:block;
-	width:95%;
-	right:16.5%;
+	width:99%;
+	right:15.0%;
 	margin:0 0% 0 0%;
 	padding:0 0 0 0;
 }
 #backtotop{
 	position:relative;
-	margin:10% 0 0 23%;	
+	margin:10% 0 0 29%;	
 }
 #backtotop a{
 	font-family: 'Yellowtail', cursive;
 	font-size:1.4em;
 	position:relative;
 	display:inline-block;	
-	/*width:150px;
-	height:116;*/
 	background-image:url(../images/backboard.png);
 	background-repeat:no-repeat;
 	background-size:100% 100%;
 	text-align:center;
 	padding:5%;	
 }
-
 
 /* Tablet Layout: 481px to 768px. Inherits styles from: Mobile Layout. */
 
